--- a/needstobelaravelified/level_overview.html
+++ b/needstobelaravelified/level_overview.html
@@ -39,19 +39,19 @@
               Level 1
             </div>
             <div class="col-xs-4 star-column">
-              <img src="img/png/star.png" class="img-responsive center-block star hvr-grow"><br/>
+              <a href="difficulty.html"><img src="img/png/star.png" class="img-responsive center-block star hvr-grow"><br/></a>
               Level 2
             </div>
             <div class="col-xs-4 star-column">
-              <img src="img/png/star_empty.png" class="img-responsive center-block star hvr-grow"><br/>
+              <a href="difficulty.html"><img src="img/png/star_empty.png" class="img-responsive center-block star hvr-grow"><br/></a>
               Level 3
             </div>
             <div class="col-xs-4 star-column">
-              <img src="img/png/star_empty.png" class="img-responsive center-block star hvr-grow"><br/>
+              <a href="difficulty.html"><img src="img/png/star_empty.png" class="img-responsive center-block star hvr-grow"><br/></a>
               Level 4
             </div>
             <div class="col-xs-4 star-column">
-              <img src="img/png/star_empty.png" class="img-responsive center-block star hvr-grow"><br/>
+              <a href="difficulty.html"><img src="img/png/star_empty.png" class="img-responsive center-block star hvr-grow"><br/></a>
               Level 5
             </div>
           </div>
